# CRHS

./: Cargo.toml  README.md
crush/: Cargo.toml  README.md
crush/src/algebra/: mod.rs  test.rs
crush/src/soc/: bdd.rs  level.rs  mod.rs  node.rs  system.rs  test.rs  utils.rs
crush/src/soc/bdd/differential/: dependency_finder.rs  mod.rs  post_processing.rs  test.rs  w_arenas.rs  wide_count_prune_core.rs  wide_prune_core.rs
crush/src/solver/: mod.rs
pathfinder/: Cargo.toml  README.md
pathfinder/src/: lib.rs
pathfinder/src/ciphers/: lowmc.rs  mod.rs  prince.rs
pathfinder/src/code_gen/: gsf.rs  mod.rs  soc_gen.rs
pathfinder/src/diff_solver/: meta.rs  mod.rs  old_simple_solver.rs  simple_solver.rs
pathfinder/src/diff_solver/post_processing_v5/: mod.rs  sess_handling.rs
pathfinder/src/diff_solver/post_processing_v5/bt/: bthandler_trait.rs  mod.rs
pathfinder/src/diff_solver/post_processing_v5/hull_calc/: construct_alpha_beta.rs  extract_alpha_beta.rs  mod.rs
pathfinder/src/diff_solver/post_processing_v5/hull_calc_v2/: construct_alpha_beta.rs  dfe.rs  extract_alpha_beta.rs  mod.rs  priming.rs  results.rs
pathfinder/src/diff_solver/post_processing_v5/logging/: cache.rs  mod.rs  pre_sess_estimate.rs  trace_logger.rs
pathfinder/src/diff_solver/post_processing_v5/utils/: mod.rs  path.rs
soccs/: Cargo.toml  README.md
soccs/src/: lib.rs
soccs/src/dl/: dl_options.rs  mod.rs  progress.rs
soccs/src/dl/builders/: llb.rs  mod.rs
soccs/src/dl/builders/cg/: mod.rs
soccs/src/dl/cg_original/: mod.rs  property.rs  sbox.rs
soccs/src/dl/cg_original/cipher/: aes.rs  boron.rs  des.rs  epcbc48.rs  epcbc96.rs  fly.rs  gift128.rs  gift64.rs  halka.rs  iceberg.rs  khazad.rs  klein.rs  led.rs  mibs.rs  (+14 more)
(+20 files in other folders)
