[package]
name = "crush"
version = "0.1.0"
authors = ["Nicolas Costes <nicolas@simula.no>"]
edition = "2018"

[dependencies]
vob = "2.0.2"
nom = "4.2.2"
ahash = "0.2.17"
num-bigint = "0.3.0"
rayon = "^1.5.0"

num-traits = { version = "0.2.14", optional = true }
indicatif = { version = "^0.15.0", optional = true }
tokio = {version = "^1.3.0", features = ["rt"], optional = true}
console = { version = "0.13.0", optional = true }


[lib]
name = "crush"
path = "src/lib.rs"

[features]
# Enable functionality developed for linear and differential cryptanalysis.
# Enables features such as 'pruning' and extraction of metadata related to connectivity and "active" paths.
differential = ["console", "num-traits", "indicatif"]